# vss

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  builder.go  builder_test.go  cli.go  commands.go  config.go  const_unix.go  filedata.go  frontmatter.go  go.mod  go.sum  meta.go  self_update.go  self_version.go  serve.go  skeleton.go  vss.go
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yaml  update-docs.yaml
assets/: about.md  index.md
cmd/vss/: main.go
docs/: about.md  config.toml  data-model.drawio  index.md  vss.toml
docs/layouts/: index.html
example_site/: README.md  index.md  vss.toml
example_site/layouts/: default.html
example_site/posts/: first.md  second.md
go/: Makefile  build.go  commands.go  const_windows.go  go.mod  new.go  self_update.go  vss.go
go/assets/: vss.toml
go/scripts/: install.ps1  install.sh
internal/command/: build.go  commands.go  const_unix.go  const_windows.go  meta.go  new.go  self_update.go  self_version.go  serve.go
internal/config/: config.go
internal/skeleton/: skeleton.go
issues/: tag-page-sort-by-pub-datetime.md
scripts/: install.ps1  install.sh
site/: README.md  about.md  index.md  vss.toml
site/docs/: index.md
site/drawio/: pages-json.drawio
site/examples/: index.md
site/layouts/: default.html  index.html
site/posts/: first.md  index.md  v0.8.0.md
site/static/: logo.png:Zone.Identifier
src/: lib.rs  main.rs  subcommand_build.rs  subcommand_self.rs  subcommand_serve.rs
src/subcommand_self/: update.rs  (+1 more)
testdata/: test_template.html
(+13 files in other folders)
