[package]
name = "vss"
version = "0.17.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
glob = "0.3.3"
gray_matter = "0.2"
markdown = "1.0.0"
noargs = "0.4.1"
notify = "6.0"
notify-debouncer-mini = "0.4"
ramhorns = "0.14"
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
